[package]
name = "twapi"
version = "0.5.2"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A simple Twitter library. This is easy for customize."
repository = "https://github.com/aoyagikouhei/twapi-rs"
keywords = ["twitter", "oauth"]
categories = ["api-bindings"]
readme = "Readme.md"
documentation = "https://docs.rs/twapi"
edition = "2018"

[dependencies]
base64 = "~0.10.1"
url = "~2.1.0"
reqwest = "~0.9.22"
serde_json = "~1.0.41"
ipnetwork = { version = "~0.15.0", optional = true }
twapi-oauth = "~0.1.3"
#twapi-oauth = { path = '../twapi-oauth-rs'}
serde_urlencoded = "~0.6.1"

[features]
account-activity = [ "ipnetwork" ]

