[package]
name = "twapi"
version = "0.6.0"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A simple Twitter library. This is easy for customize."
repository = "https://github.com/aoyagikouhei/twapi-rs"
keywords = ["twitter", "oauth"]
categories = ["api-bindings"]
readme = "Readme.md"
documentation = "https://docs.rs/twapi"
edition = "2018"

[dependencies]
async-trait = "^0.1"
base64 = "^0.11"
url = "^2.1"
serde_json = "^1.0"
ipnetwork = { version = "^0.16", optional = true }
serde_urlencoded = "^0.6"
twapi-reqwest = "^0.1"
#twapi-reqwest = { path = "../twapi-reqwest-rs" }
tokio = { version = "^0.2", features = ["time"] }

[features]
account-activity = [ "ipnetwork" ]
